# enpm702-fall-2025

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Refresh.txt  d
docs/source/lecture6/: introduction.rst
rwa2_starter/: CMakeLists.txt
rwa2_starter/src/: main.cpp
rwa3_starter/: CMakeLists.txt  Doxyfile
rwa3_starter/include/: robot_control.hpp  robot_kinematics.hpp  robot_types.hpp
rwa3_starter/src/: main.cpp  robot_control.cpp  robot_types.cpp
week1/: CMakeLists.txt  Doxyfile
week1/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  lecture1_8hpp_source.html  navtreedata.js  week1_8cpp.html  week1_8cpp__incl.map  week1_8cpp__incl.md5  week1_8cpp_source.html
week1/src/: week1.cpp
week2/: CMakeLists.txt
week2/src/: week2.cpp
week3/src/: week3_exercise.cpp
week5/include/: week5.hpp
week5/src/: main.cpp  week5.cpp  week5_exe
week7/src/: main.cpp
